[gd_scene load_steps=2 format=3 uid="uid://bbxgbolt4cl8l"]

[ext_resource type="Script" path="res://addons/todo_tracker/Scripts/settings_grid.gd" id="1_0idrs"]

[node name="SettingsGrid" type="GridContainer"]
script = ExtResource("1_0idrs")

[node name="BranchColorPickerSplit" type="HSplitContainer" parent="."]
layout_mode = 2
metadata/persist = true

[node name="BranchColorPickerBtn" type="ColorPickerButton" parent="BranchColorPickerSplit"]
layout_mode = 2
text = "     "
metadata/persist = true

[node name="Label" type="Label" parent="BranchColorPickerSplit"]
layout_mode = 2
text = "File/Folder Names"
metadata/persist = true

[node name="HSep" type="HSeparator" parent="."]
layout_mode = 2
size_flags_horizontal = 3
metadata/persist = true

[node name="QueryGrid" type="GridContainer" parent="."]
layout_mode = 2
columns = 2
metadata/persist = true

[node name="Button" type="Button" parent="QueryGrid"]
layout_mode = 2
text = " + "
metadata/persist = true

[node name="Label" type="Label" parent="QueryGrid"]
layout_mode = 2
tooltip_text = "Case Sensative, and is simple string equality. These are just comment post-its, if you need something more powerful... edit the code."
mouse_filter = 1
text = "Query List"
metadata/persist = true

[node name="NewQueryCPBtn" type="ColorPickerButton" parent="QueryGrid"]
layout_mode = 2
text = "     "
metadata/persist = true

[node name="LineEdit" type="LineEdit" parent="QueryGrid"]
layout_mode = 2
size_flags_horizontal = 3
metadata/persist = true

[node name="HSep2" type="HSeparator" parent="."]
layout_mode = 2
metadata/persist = true

[node name="FileExtGrid" type="GridContainer" parent="."]
layout_mode = 2
columns = 2
metadata/persist = true

[node name="Button" type="Button" parent="FileExtGrid"]
layout_mode = 2
text = " + "
metadata/persist = true

[node name="Label" type="Label" parent="FileExtGrid"]
layout_mode = 2
tooltip_text = "Will only search the file extensions listed, include the period."
mouse_filter = 1
text = "File Extensions to Search"
metadata/persist = true

[node name="NewExtensionCPBtn" type="ColorPickerButton" parent="FileExtGrid"]
layout_mode = 2
text = "     "
metadata/persist = true

[node name="LineEdit" type="LineEdit" parent="FileExtGrid"]
layout_mode = 2
size_flags_horizontal = 3
metadata/persist = true

[node name="HSep3" type="HSeparator" parent="."]
layout_mode = 2
metadata/persist = true

[node name="IgnoreGrid" type="GridContainer" parent="."]
layout_mode = 2
columns = 2
metadata/persist = true

[node name="Button" type="Button" parent="IgnoreGrid"]
layout_mode = 2
text = " + "
metadata/persist = true

[node name="Label" type="Label" parent="IgnoreGrid"]
layout_mode = 2
tooltip_text = "Will ignore all folders and files that match perfectly."
mouse_filter = 1
text = "Folder Names to Ignore"
metadata/persist = true

[node name="NewIgnoreCPBtn" type="ColorPickerButton" parent="IgnoreGrid"]
layout_mode = 2
text = "     "
metadata/persist = true

[node name="LineEdit" type="LineEdit" parent="IgnoreGrid"]
layout_mode = 2
size_flags_horizontal = 3
metadata/persist = true

[node name="HSep4" type="HSeparator" parent="."]
layout_mode = 2
metadata/persist = true

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
metadata/persist = true

[node name="ClrBtn" type="Button" parent="HSplitContainer"]
layout_mode = 2
text = "Clr"
metadata/persist = true

[node name="SaveBtn" type="Button" parent="HSplitContainer"]
layout_mode = 2
text = "Save and Close"
metadata/persist = true
